syntax = "proto3";
package spacemesh.v1;
import "spacemesh/v1/types.proto";

// All data items that touch an account (see below note, under the associated
// message)
enum AccountDataFlag {
    ACCOUNT_DATA_FLAG_UNSPECIFIED = 0;
    ACCOUNT_DATA_FLAG_TRANSACTION_RECEIPT = 1; // tx receipt for a tx to or from an account
    ACCOUNT_DATA_FLAG_REWARD = 2; // reward awarded to an account
    ACCOUNT_DATA_FLAG_ACCOUNT = 4; // account data changes (counter or balance)
}

message AccountRequest {
    AccountId account_id = 1;
}

message AccountResponse {
    Account account = 1;
}

message AccountDataFilter {
    AccountId account_id = 1;
    uint32 account_data_flags = 2; // bit field of AccountDataFlag
}

message AccountDataStreamRequest {
    AccountDataFilter filter = 1;
}

message AccountDataStreamResponse {
    AccountData data = 1;
}

message AccountDataQueryRequest {
    AccountDataFilter filter = 1;
    uint32 max_results = 2; // max numbers of results client would like to get
    uint32 offset = 3; // return results from offset
}

// All data items that touch an account: receipts for transactions from, or to
// this account, as well as those that modify its state (e.g., token transfers).
// Rewards here includes fees paid. Account contains counter and balance updates.
// Note that this mixes concerns: transactions and rewards are _causes_ of a
// change to account state; nonce and balance updates are _results_.
message AccountData {
    oneof item {
        Reward reward = 1;
        TransactionReceipt receipt = 2;
        Account account = 3;
    }
}

message AccountDataQueryResponse {
    uint32 total_results = 1;
    repeated AccountData account_item = 2;
}

message SmesherRewardStreamRequest {
    SmesherId id = 1;
}

message SmesherRewardStreamResponse {
    Reward reward = 1;
}

message SmesherDataQueryRequest {
    SmesherId smesher_id = 1;
    uint32 max_results = 2; // max numbers of results client would like to get
    uint32 offset = 3; // return results from offset
}

message SmesherDataQueryResponse {
    uint32 total_results = 1;
    repeated Reward rewards = 2;
}

enum GlobalStateDataItemFlag {
    GLOBAL_STATE_DATA_ITEM_FLAG_UNSPECIFIED = 0;
    GLOBAL_STATE_DATA_ITEM_FLAG_TRANSACTION_RECEIPT = 1; // tx receipt generated
    GLOBAL_STATE_DATA_ITEM_FLAG_REWARD = 2; // reward awarded to an account (includes fees paid)
    GLOBAL_STATE_DATA_ITEM_FLAG_ACCOUNT = 4; // account data changes (counter or balance)
    GLOBAL_STATE_DATA_ITEM_FLAG_GLOBAL_STATE_HASH = 8; // hash of global state (i.e., state root)
}

message GlobalStateHash{
    bytes root_hash = 1;
    uint64 layer_number = 2;
}

// For now this is empty but in future we might want to allow this to take a
// layer number.
message GlobalStateHashRequest {}

message GlobalStateHashResponse {
    GlobalStateHash response = 1;
}

message GlobalStateStreamRequest {
    uint32 global_state_data_item_flags = 1; // bit field of GlobalStateDataItemFlag
}

message GlobalStateDataItem {
    oneof data {
        Reward reward = 1;
        TransactionReceipt receipt = 2;
        Account account = 3;
        GlobalStateHash global_state = 4;
    }
}

message GlobalStateStreamResponse {
    repeated GlobalStateDataItem data_item = 1;
}

message AppEventStreamRequest {}

message AppEventStreamResponse {
    AppEvent event = 1;
}

