syntax = "proto3";
package spacemesh.v1;
import "google/protobuf/empty.proto";
import "spacemesh/v1/mesh_types.proto";


// Readonly API for basic mesh info
service MeshService {

    // Network genesis time as unix epoch time
    rpc GenesisTime(google.protobuf.Empty) returns (GenesisTimeResponse);

    // Current layer number
    rpc CurrentLayer(google.protobuf.Empty) returns (CurrentLayerResponse);

    // Current epoch number
    rpc CurrentEpoch(google.protobuf.Empty) returns (CurrentEpochResponse);

    // Network ID
    rpc NetId(google.protobuf.Empty) returns (NetIdResponse);

    // Number of layers per epoch (a network parameter)
    rpc EpochNumLayers(google.protobuf.Empty) returns (EpochNumLayersResponse);

    // Number of transactions per second (a network parameter)
    rpc MaxTransactionsPerSecond(google.protobuf.Empty) returns (MaxTransactionsPerSecondResponse);

    ////////// Queries
    // Queries return paginated, historical data.

    // Get account data query
    rpc AccountMeshDataQuery(AccountMeshDataQueryRequest) returns (AccountMeshDataQueryResponse);

    // Layers data query
    rpc LayersQuery(LayersQueryRequest) returns (LayersQueryResponse);

    ////////// Streams
    // Streams return live, new data as it becomes available to the node and not
    // historical data.

    // A stream of transactions and activations from an account.
    // Includes simple coin transactions with the account as the destination.
    rpc AccountMeshDataStream(AccountMeshDataStreamRequest) returns (stream AccountMeshDataStreamResponse);

    // Layer with blocks, transactions and activations
    // Sent each time layer data changes. Designed for heavy-duty clients.
    rpc LayerStream(google.protobuf.Empty) returns (stream LayerStreamResponse);
}
