syntax = "proto3";
package spacemesh.v1;

import "spacemesh/v1/types.proto";

message GenesisTimeResponse {
    SimpleInt unixtime = 1;
}

message CurrentLayerResponse {
    SimpleInt layernum = 1;
}

message CurrentEpochResponse {
    SimpleInt epochnum = 1;
}

message NetIdResponse {
    SimpleInt netid = 1;
}

message EpochNumLayersResponse {
    SimpleInt numlayers = 1;
}

message MaxTransactionsPerSecondResponse {
    SimpleInt maxtxpersecond = 1;
}

enum AccountMeshDataFlag {
    ACCOUNT_MESH_DATA_FLAG_UNSPECIFIED = 0;
    ACCOUNT_MESH_DATA_FLAG_TRANSACTIONS = 1;
    ACCOUNT_MESH_DATA_FLAG_ACTIVATIONS = 2;
}

message AccountMeshDataFilter {
    AccountId account_id = 1;
    uint32 account_mesh_data_flags = 2; // A bit field of AccountMeshDataFlags
}

message AccountMeshData {
    oneof data_item {
        Transaction transaction = 1;
        Activation activation = 2;
    }
}

message AccountMeshDataStreamRequest {
    AccountMeshDataFilter filter = 1;
}

message AccountMeshDataStreamResponse {
    AccountMeshData data = 1;
}

message AccountMeshDataQueryRequest {
    AccountMeshDataFilter filter = 1;
    uint64 min_layer = 2; // return data only from this layer or later
    uint32 max_results = 3; // max number of results to return
    uint32 offset = 4; // query offset
}

message AccountMeshDataQueryResponse {
    repeated AccountMeshData data = 1;
    uint32 total_results = 2; // total number of availble results
}

message LayersQueryRequest {
    uint32 start_layer = 1;
    uint32 end_layer = 2;
}

message LayersQueryResponse {
    repeated Layer layer = 1;
}

message LayerStreamResponse {
    Layer layer = 1;
}
